second commit  wtj 7.7

--- a/app/src/main/res/layout/activity_select_birthday.xml
+++ b/app/src/main/res/layout/activity_select_birthday.xml
@@ -8,20 +8,26 @@
     <include
         layout="@layout/comm_title"
         />
-
+    <include
+        layout="@layout/title_info"/>
     <DatePicker
+        android:layout_marginTop="15dp"
         android:id="@+id/data_select"
         android:layoutMode="clipBounds"
         android:calendarViewShown="false"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
     </DatePicker>
     <Button
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
         android:text="获取选定时间"
         android:id="@+id/bt_getTime"
-        android:layout_width="wrap_content"
+        android:textColor="@color/white"
+        android:background="@drawable/em_button_login_bg"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
