--- a/app/src/main/res/layout/activity_select_noeat.xml
+++ b/app/src/main/res/layout/activity_select_noeat.xml
@@ -5,24 +5,138 @@
     android:orientation="vertical">
 
     <include layout="@layout/comm_title" />
+<include layout="@layout/title_info"/>
 
-
-    <ListView
-        android:id="@+id/lv_noeat"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="6"
-        android:scrollbars="none">
+        android:layout_margin="15dp"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_alignParentLeft="true"
+            android:id="@+id/iv_shutiao"
+            android:layout_marginLeft="20dp"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:src="@drawable/iv_shutiao"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_toRightOf="@id/iv_shutiao"
+            android:id="@+id/tv_zhurou"
+            android:layout_centerVertical="true"
+            android:text="猪肉类"
+            android:textSize="18sp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <CheckBox
+            android:id="@+id/cb_zhurou"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
 
-    </ListView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_margin="15dp"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_alignParentLeft="true"
+            android:id="@+id/iv_yangrou"
+            android:layout_marginLeft="20dp"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:src="@drawable/iv_shutiao"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_toRightOf="@id/iv_yangrou"
+            android:id="@+id/tv_rangrou"
+            android:layout_centerVertical="true"
+            android:text="羊肉类"
+            android:textSize="18sp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <CheckBox
+            android:id="@+id/cb_rangrou"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_margin="15dp"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_alignParentLeft="true"
+            android:id="@+id/iv_shuichan"
+            android:layout_marginLeft="20dp"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:src="@drawable/iv_shutiao"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_toRightOf="@id/iv_shuichan"
+            android:id="@+id/tv_shuichan"
+            android:layout_centerVertical="true"
+            android:text="水产类"
+            android:textSize="18sp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <CheckBox
+            android:id="@+id/cb_shuichan"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_margin="15dp"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_alignParentLeft="true"
+            android:id="@+id/iv_qinlei"
+            android:layout_marginLeft="20dp"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:src="@drawable/iv_shutiao"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_toRightOf="@id/iv_qinlei"
+            android:id="@+id/tv_qinlei"
+            android:layout_centerVertical="true"
+            android:text="家禽类"
+            android:textSize="18sp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <CheckBox
+            android:id="@+id/cb_qin"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
 
     <Button
+        android:layout_marginTop="20dp"
         android:id="@+id/bt_ok_noeat"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textColor="@color/white"
+        android:background="@drawable/em_button_login_bg"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="1"
         android:text="确定"
         android:textSize="20sp" />
 </LinearLayout>
