--- a/app/src/main/res/layout/activity_select_height.xml
+++ b/app/src/main/res/layout/activity_select_height.xml
@@ -8,21 +8,24 @@
     <include
         layout="@layout/comm_title"
         />
-
+<include
+    layout="@layout/title_info"/>
 
     <com.diligroup.view.WheelView
-        android:layout_weight="6"
         android:layout_marginTop="10dp"
         android:id="@+id/wv_height"
         android:layout_width="match_parent"
-        android:layout_height="0dp" />
+        android:layout_height="150dp" />
     <Button
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
+        android:background="@drawable/em_button_login_bg"
         android:text="确定"
         android:textSize="20sp"
+        android:textColor="@color/white"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         android:id="@+id/bt_ok_height"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
