--- a/app/src/main/res/layout/activity_select_sex.xml
+++ b/app/src/main/res/layout/activity_select_sex.xml
@@ -1,42 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-  >
-    <include
-        layout="@layout/comm_title"
-        />
+    android:orientation="vertical">
 
-    <TextView
-        android:text="请选择 性别"
-        android:textSize="20sp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <RadioGroup
-        android:id="@+id/rg_sex"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal"
+    <include layout="@layout/comm_title" />
+
+<include
+    layout="@layout/title_info"/>
+
+    <RelativeLayout
+        android:id="@+id/rl_sex"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <RadioButton
-            android:id="@+id/rb_boy"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:checked="true"
-            android:text="男"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp">
+
+        <View
+            android:id="@+id/line_center"
+            android:layout_width="1dp"
+            android:layout_height="150dp"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="10dp"
+            android:background="#DCDCDC" />
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <RadioButton
-            android:id="@+id/rb_girl"
-            android:gravity="center"
-            android:text="女"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="35dp"
+            android:layout_toLeftOf="@id/line_center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv_man"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/iv_sex_boy" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:text="男" />
+        </LinearLayout>
+
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </RadioGroup>
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="35dp"
+            android:layout_toRightOf="@id/line_center"
+            android:orientation="vertical">
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/iv_sex_girl" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:text="女" />
+        </LinearLayout>
 
+    </RelativeLayout>
+
+    <Button
+        android:textColor="@color/white"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/em_button_login_bg"
+        android:id="@+id/bt_ok_sex"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:text="确定" />
 </LinearLayout>
