--- a/app/src/main/res/layout/activity_select_weight.xml
+++ b/app/src/main/res/layout/activity_select_weight.xml
@@ -5,23 +5,27 @@
     android:orientation="vertical">
 
     <include layout="@layout/comm_title" />
-
+   <include
+       layout="@layout/title_info"/>
     <com.diligroup.view.WheelView
         android:id="@+id/wheel_weight"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="30dp"
-        android:layout_weight="6">
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+       >
 
     </com.diligroup.view.WheelView>
 
     <Button
+        android:textColor="@color/white"
+        android:background="@drawable/em_button_login_bg"
         android:id="@+id/bt_ok_weight"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_gravity="center"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="1"
         android:text="确定"
         android:textSize="20sp" />
 </LinearLayout>
