--- a/app/src/main/res/layout/activity_select_work.xml
+++ b/app/src/main/res/layout/activity_select_work.xml
@@ -8,7 +8,8 @@
     <include
         layout="@layout/comm_title"
        />
-
+    <include
+        layout="@layout/title_info"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
