--- a/app/src/main/res/layout/activity_select_special.xml
+++ b/app/src/main/res/layout/activity_select_special.xml
@@ -4,27 +4,140 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include
-        layout="@layout/comm_title"
-        />
+    <include layout="@layout/comm_title" />
 
+    <include layout="@layout/title_info" />
 
-    <ListView
-        android:id="@+id/lv_special"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="6"
-        android:scrollbars="none">
+        android:layout_margin="15dp"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_alignParentLeft="true"
+            android:id="@+id/iv_early_stage"
+            android:layout_marginLeft="20dp"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:src="@drawable/iv_shutiao"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_toRightOf="@id/iv_early_stage"
+            android:id="@+id/tv_early_stage"
+            android:layout_centerVertical="true"
+            android:text="孕早期"
+            android:textSize="18sp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <CheckBox
+            android:id="@+id/cb_early_stage"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
 
-    </ListView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_margin="15dp"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_alignParentLeft="true"
+            android:id="@+id/iv_middle_stage"
+            android:layout_marginLeft="20dp"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:src="@drawable/iv_shutiao"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_toRightOf="@id/iv_middle_stage"
+            android:id="@+id/tv_middle_stage"
+            android:layout_centerVertical="true"
+            android:text="孕中期"
+            android:textSize="18sp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <CheckBox
+            android:id="@+id/cb_middle_stage"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_margin="15dp"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_alignParentLeft="true"
+            android:id="@+id/iv_later_stage"
+            android:layout_marginLeft="20dp"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:src="@drawable/iv_shutiao"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_toRightOf="@id/iv_later_stage"
+            android:id="@+id/tv_later_stage"
+            android:layout_centerVertical="true"
+            android:text="孕晚期"
+            android:textSize="18sp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <CheckBox
+            android:id="@+id/cb_later_stage"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_margin="15dp"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_alignParentLeft="true"
+            android:id="@+id/iv_buru_stage"
+            android:layout_marginLeft="20dp"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:src="@drawable/iv_shutiao"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_toRightOf="@id/iv_buru_stage"
+            android:id="@+id/tv_buru_stage"
+            android:layout_centerVertical="true"
+            android:text="哺乳期"
+            android:textSize="18sp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <CheckBox
+            android:id="@+id/cb_buru_stage"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
 
     <Button
-        android:id="@+id/bt_ok_spe"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="1"
+        android:layout_marginTop="20dp"
+        android:id="@+id/bt_report_special"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textColor="@color/white"
+        android:background="@drawable/em_button_login_bg"
+        android:layout_gravity="center_horizontal"
         android:text="确定"
         android:textSize="20sp" />
 </LinearLayout>
