--- a/app/src/main/res/layout/activity_find_psd.xml
+++ b/app/src/main/res/layout/activity_find_psd.xml
@@ -17,7 +17,7 @@
         android:hint="请输入手机号"
         android:imeActionId="@+id/login"
         android:imeOptions="actionUnspecified"
-        android:inputType="textPassword"
+        android:inputType="number"
         android:maxLines="1"
         android:singleLine="true" />
 
@@ -58,15 +58,16 @@
         android:hint="请输入您的新密码" />
 
     <Button
-        android:id="@+id/bt_regist3"
+        android:id="@+id/bt_ok2"
         style="?android:textAppearanceSmall"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="36dp"
+        android:layout_margin="40dp"
         android:background="@drawable/em_button_login_bg"
         android:gravity="center"
-        android:text="注册"
+        android:text="确定"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold" />
