--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -17,7 +17,7 @@
         android:hint="请输入手机号"
         android:imeActionId="@+id/login"
         android:imeOptions="actionUnspecified"
-        android:inputType="textPassword"
+        android:inputType="number"
         android:maxLines="1"
         android:singleLine="true" />
 
@@ -43,19 +43,19 @@
             android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
             android:layout_weight="4"
-
             android:background="@drawable/em_button_login_bg"
             android:text="获取验证码"
             android:textColor="@color/white" />
     </LinearLayout>
 
     <EditText
-        android:id="@+id/et_newpsd"
+        android:id="@+id/et_psd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="15dp"
+        android:inputType="textPassword"
         android:hint="请输入您的密码" />
 
     <Button
