--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -13,7 +13,8 @@
             android:id="@+id/iv_user_header"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
             android:src="@drawable/iv_user_header" />
         <TextView
             android:layout_marginTop="5dp"
@@ -27,7 +28,7 @@
     </RelativeLayout>
     <RelativeLayout
         android:id="@+id/rl_go_userinfo"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
@@ -40,7 +41,7 @@
         <TextView
             android:paddingLeft="20dp"
             android:layout_centerVertical="true"
-            android:textSize="20sp"
+            android:textSize="12sp"
             android:layout_toRightOf="@id/iv_user_icon"
             android:textColor="@color/black"
             android:text="我的资料"
@@ -63,7 +64,7 @@
     android:layout_height="1dp"/>
     <RelativeLayout
         android:id="@+id/rl_go_setting"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
@@ -76,7 +77,7 @@
         <TextView
             android:paddingLeft="20dp"
             android:layout_centerVertical="true"
-            android:textSize="20sp"
+            android:textSize="12sp"
             android:layout_toRightOf="@id/iv_set"
             android:textColor="@color/black"
             android:text="设置"
@@ -99,7 +100,7 @@
         android:layout_height="1dp"/>
     <RelativeLayout
         android:id="@+id/rl_go_service"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
@@ -112,7 +113,7 @@
         <TextView
             android:paddingLeft="20dp"
             android:layout_centerVertical="true"
-            android:textSize="20sp"
+            android:textSize="12sp"
             android:layout_toRightOf="@id/iv_service"
             android:textColor="@color/black"
             android:text="服务中心"
