--- a/app/src/main/res/layout/comm_title.xml
+++ b/app/src/main/res/layout/comm_title.xml
@@ -5,12 +5,13 @@
     android:background="@color/title_color">
 
     <ImageView
-        android:visibility="visible"
+        android:visibility="invisible"
         android:id="@+id/iv_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:padding="15dp"
+
         android:layout_marginLeft="3dp"
         android:src="@drawable/go_back" />
 
