--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -14,7 +14,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/iv_user_header" />
         <TextView
             android:layout_marginTop="5dp"
@@ -23,8 +23,10 @@
             android:text="12345678909"
             android:textColor="@color/white"
             android:id="@+id/tv_numb_phone"
+            android:layout_marginBottom="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
     </RelativeLayout>
     <RelativeLayout
         android:id="@+id/rl_go_userinfo"
@@ -135,21 +137,29 @@
         android:layout_marginRight="18dp"
         android:layout_height="1dp"/>
     <TextView
-        android:padding="15dp"
+        android:layout_marginLeft="10dp"
+        android:padding="10dp"
         android:textColor="@color/black"
-        android:textSize="15sp"
+        android:textSize="12sp"
         android:text="请输入您的宝贵意见 :"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <EditText
+        android:gravity="top"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:background="#F0F0F0"
-        android:padding="10dp"
+        android:padding="20dp"
+        android:textSize="12sp"
+        android:lines="4"
+        android:inputType="textMultiLine"
+        android:minLines="4"
         android:id="@+id/et_suggestions"
-        android:lines="6"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="100dp" />
     <Button
-        android:padding="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal"
         android:id="@+id/bt_submit"
         android:text="提交"
