--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,23 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/home_rootView">
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <com.diligroup.view.MyViewFilpper
-        android:id="@+id/home_flipper"
-        android:layout_width="fill_parent"
-        android:layout_height="180dp"
-        android:background="#ff5621"
-        android:autoStart="true"/>
+
+        <com.diligroup.view.MyViewFilpper
+            android:id="@+id/home_flipper"
+            android:layout_width="fill_parent"
+            android:layout_height="151.3dp"
+            android:autoStart="true" />
+
         <LinearLayout
+            android:id="@+id/banner_dot_ll"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:orientation="horizontal"
-            android:id="@+id/banner_dot_ll"
             android:layout_gravity="bottom|center_horizontal"
-          ></LinearLayout>
+            android:orientation="horizontal"></LinearLayout>
     </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/common_backgroud"
+        android:gravity="center_horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="39dp"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/left_line" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:text="门店供应菜品"
+                android:textColor="@color/black1"
+                android:textSize="14sp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/right_line" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="38dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:paddingBottom="2dp"
+        android:paddingTop="2dp">
+
+        <TextView
+            android:id="@+id/home_preDay"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="前一天"
+            android:textColor="@color/black1"
+            android:textSize="11sp" />
+<View
+    android:layout_width="0.1dp"
+    android:layout_height="match_parent"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp"
+    android:background="@color/line_view"/>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:id="@+id/home_currend_date"
+            android:layout_height="match_parent"
+            android:layout_weight="3">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true">
+
+                <TextView
+                    android:id="@+id/home_today"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2016年7月18日"
+                    android:textColor="@color/black1"
+                    android:textSize="13.3sp" />
+
+                <TextView
+                    android:id="@+id/home_weekday"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="(今天，周一)"
+                    android:textColor="@color/common_green"
+                    android:textSize="9.3sp" />
+            </LinearLayout>
+        </RelativeLayout>
+        <View
+            android:layout_width="0.1dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/line_view"/>
+
+        <TextView
+            android:id="@+id/home_nextDay"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="后一天"
+            android:textColor="@color/black1"
+            android:textSize="11sp" />
+    </LinearLayout>
+
+    <include layout="@layout/line_view" />
+
+    <include layout="@layout/home_header" />
+
+    <View
+        android:id="@+id/home_tabline"
+        android:layout_width="120dp"
+        android:layout_height="2dp"
+        android:background="@drawable/green_tabline" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="#fdf3e3">
+
+        <LinearLayout
+            android:id="@+id/home_thisService_evaluation"
+            android:layout_width="120dp"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="本餐服务评价"
+                android:textColor="@color/graycolor"
+                android:textSize="11sp" />
+
+            <ImageView
+                android:layout_width="8dp"
+                android:layout_height="8dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="5dp"
+                android:src="@drawable/iv_go_more" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:background="@color/common_backgroud" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/home_vPager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="1.0"
+        android:flipInterval="30"
+        android:persistentDrawingCache="animation" />
 </LinearLayout>
