--- a/app/src/main/res/layout/activity_find_psd.xml
+++ b/app/src/main/res/layout/activity_find_psd.xml
@@ -53,6 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
+        android:inputType="textPassword"
         android:layout_marginRight="15dp"
         android:layout_marginTop="15dp"
         android:hint="请输入您的新密码" />
