--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,16 +10,15 @@
     <include layout="@layout/comm_title" />
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
-        android:layout_weight="6"
+        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
-        android:layout_weight="1"
         android:layout_width="match_parent"
         android:background="@color/white"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         app:tabIndicatorColor="@color/icons" />
 </LinearLayout>
