--- a/app/src/main/res/layout/addlunch_child.xml
+++ b/app/src/main/res/layout/addlunch_child.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="59dp"
-    android:background="@drawable/backgroud_selector"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="60dp"
     android:gravity="center"
-    android:orientation="vertical">
-
-    <ImageView
-        android:layout_width="26dp"
-        android:layout_height="26dp"
-        android:src="@mipmap/ic_launcher" />
-
+    android:background="@drawable/backgroud_selector">
+<ImageView android:layout_width="29dp"
+    android:layout_height="29dp"
+    android:src="@mipmap/ic_launcher"
+    />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="热菜大荤"
         android:textColor="@color/green"
-        android:textSize="16sp" />
+        android:textSize="12sp"/>
 </LinearLayout>
