--- a/app/src/main/res/layout/activity_select_height.xml
+++ b/app/src/main/res/layout/activity_select_height.xml
@@ -5,11 +5,8 @@
     android:orientation="vertical"
     >
 
-    <include
-        layout="@layout/comm_title"
-        />
-<include
-    layout="s@layout/title_info"/>
+    <include layout="@layout/comm_title" />
+<include layout="@layout/title_info"/>
 
     <com.diligroup.view.WheelView
         android:layout_marginTop="10dp"
