--- a/app/src/main/res/layout/activity_select_work.xml
+++ b/app/src/main/res/layout/activity_select_work.xml
@@ -10,6 +10,7 @@
     <include layout="@layout/title_info" />
 
     <RelativeLayout
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white">
@@ -22,6 +23,8 @@
             android:src="@drawable/iv_shutiao" />
 
         <TextView
+            android:textSize="12sp"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -30,6 +33,8 @@
             android:textColor="@color/title_color" />
 
         <TextView
+            android:textSize="10sp"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -53,6 +58,7 @@
     </GridView>
 
     <RelativeLayout
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white">
@@ -65,6 +71,8 @@
             android:src="@drawable/iv_shutiao" />
 
         <TextView
+            android:textSize="12sp"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -73,6 +81,8 @@
             android:textColor="@color/title_color" />
 
         <TextView
+            android:textSize="10sp"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -97,6 +107,7 @@
     </GridView>
 
     <RelativeLayout
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white">
@@ -109,6 +120,7 @@
             android:src="@drawable/iv_shutiao" />
 
         <TextView
+            android:textSize="12sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -117,6 +129,7 @@
             android:textColor="@color/title_color" />
 
         <TextView
+            android:textSize="10sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
