--- a/app/src/main/res/layout/title_info.xml
+++ b/app/src/main/res/layout/title_info.xml
@@ -11,6 +11,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text=""
+            android:textColor="@color/black"
             android:textSize="12sp" />
 
         <ImageView
