updata  on 7/25 by kevin

--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="22dp"
             android:id="@+id/taste_evaluation"
-            app:prb_clickable="false"
+            app:prb_clickable="true"
             app:prb_defaultRating="1"
             app:prb_tickNormalDrawable="@mipmap/star_normal"
             app:prb_tickSelectedDrawable="@mipmap/star_selected"
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="22dp"
             android:id="@+id/cost_performance_evaluation"
-            app:prb_clickable="false"
+            app:prb_clickable="true"
             app:prb_defaultRating="1"
             app:prb_tickNormalDrawable="@mipmap/star_normal"
             app:prb_tickSelectedDrawable="@mipmap/star_selected"
