--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:id="@+id/service_evaluation"
-            app:prb_clickable="false"
+            app:prb_clickable="true"
             app:prb_tickSpacing="6dp"
             app:prb_defaultRating="3"
             app:prb_tickNormalDrawable="@mipmap/star_normal"
