--- a/app/src/main/res/drawable/backgroud_selector.xml
+++ b/app/src/main/res/drawable/backgroud_selector.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checkable="true" android:drawable="@color/white"/>
-    <item android:state_checkable="false" android:drawable="@color/common_backgroud"/>
+    <item android:state_pressed="true" android:drawable="@color/white"/>
+    <item android:state_focused="true" android:drawable="@color/white"/>
+    <item android:state_checked="true" android:drawable="@color/white"/>
+    <item android:state_checked="false" android:drawable="@color/common_backgroud"/>
 </selector>
