--- a/app/src/main/res/drawable/kuang_red.xml
+++ b/app/src/main/res/drawable/kuang_red.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="15dp"/>
-<stroke android:color="@color/common_red"
+<stroke android:color="@color/common_orenge"
     android:width="1dp"/>
     <solid android:color="@color/white"/>
 </shape>
