--- a/app/src/main/res/layout/addlunch_child.xml
+++ b/app/src/main/res/layout/addlunch_child.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:gravity="center"
-    android:background="@drawable/backgroud_selector">
-<ImageView android:layout_width="29dp"
-    android:layout_height="29dp"
-    android:src="@mipmap/ic_launcher"
-    />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_centerInParent="true">
+    <ImageView
+        android:layout_width="29dp"
+        android:layout_height="29dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@mipmap/ic_launcher"
+        android:id="@+id/dish_icon"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="热菜大荤"
+        android:layout_gravity="center_horizontal"
         android:textColor="@color/green"
-        android:textSize="12sp"/>
+        android:textSize="12sp"
+        android:id="@+id/dish_name"/>
 </LinearLayout>
+</RelativeLayout>
