--- a/app/src/main/res/layout/fragment_baseview.xml
+++ b/app/src/main/res/layout/fragment_baseview.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ExpandableListView
-        android:layout_width="0dp"
-        android:layout_weight="1"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
+    <ListView
+        android:layout_width="90dp"
         android:layout_height="match_parent"
         android:id="@+id/home_left_listView"
         android:background="@color/common_backgroud"
         android:dividerHeight="0.1dp"
         android:divider="@color/line_view"
         android:groupIndicator="@null"
-        android:listSelector="#e1e1e1"
+        android:listSelector="@drawable/backgroud_selector"
         android:childDivider="@color/line_view"
         android:scrollbars="none" >
-    </ExpandableListView>
+    </ListView>
     <android.support.v7.widget.RecyclerView
         android:layout_width="0dp"
-        android:layout_weight="3"
+        android:layout_weight="1"
         android:layout_height="match_parent"
         android:divider="@color/line_view"
         android:scrollbars="none"
