--- a/app/src/main/res/layout/fragment_storesupply.xml
+++ b/app/src/main/res/layout/fragment_storesupply.xml
@@ -33,24 +33,23 @@
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1">
-    <ExpandableListView
-        android:layout_width="0dp"
-        android:layout_weight="1"
+    <ListView
+        android:layout_width="90dp"
         android:layout_height="match_parent"
         android:id="@+id/left_listView"
-        android:background="@color/common_backgroud"
+        android:background="@drawable/backgroud_selector"
         android:dividerHeight="0.1dp"
         android:divider="@color/line_view"
         android:groupIndicator="@null"
         android:listSelector="#e1e1e1"
         android:childDivider="@color/line_view"
         android:scrollbars="none" >
-    </ExpandableListView>
+    </ListView>
     <android.support.v7.widget.RecyclerView
         android:layout_marginLeft="13dp"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:background="@color/white"
         android:id="@+id/right_recyclerView">
     </android.support.v7.widget.RecyclerView>
