--- a/app/src/main/res/layout/home_rightlist.xml
+++ b/app/src/main/res/layout/home_rightlist.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginLeft="12dp">
 
         <ImageView
             android:id="@+id/home_right_icon"
