--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -171,6 +171,6 @@
     <color name="graycolor">#999999</color>
     <color name="calendar_gray_color">#dddddd</color>
     <color name="common_backgroud">#f0f0f0</color>
-    <color name="common_red">#ff0000</color>
+    <color name="common_orenge">#ff6633</color>
 
 </resources>
